force-app/main/default/objects/Dan360_Licencia__c/Dan360_Licencia__c.object-meta.xml
<CustomObject>
    <description>Objeto para registrar las licencias y dias no promocionables del APM</description>
    <label>Licencia</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Licencia Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licencias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>