force-app/main/default/objects/Dan360_Licencia__c/fields/Aprobador_Final_Name__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Final_Name__c</fullName>
    <formula>Aprobador_Final__r.FirstName + &apos; &apos; +  Aprobador_Final__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aprobador Final Name</label>
    <type>Text</type>
</CustomField>