force-app/main/default/objects/Dan360_Licencia__c/fields/Cantidad_de_Dias__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Dias__c</fullName>
    <description>Devuelve la cantidad de dias HABILES que ocupara la Licencia restando la fecha de fin con la fecha de inicio</description>
    <formula>IF( Tipo_de_Registro__c = &apos;Tiempo_no_Promocional&apos;,  Cantidad_de_Horas_Valor__c,
			IF(
				Fecha_de_inicio__c == Fecha_de_Fin__c,	1,
				/*Si las Fecha_de_fin__c es sabado o domingo NO se le suma 1 a la cuenta */
				IF(OR(MOD( Fecha_de_Fin__c - DATE( 1900, 1, 1), 7) = 6, MOD( Fecha_de_Fin__c - DATE( 1900, 1, 1), 7) = 5),
							(5 * ( FLOOR( ( Fecha_de_Fin__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Fecha_de_Fin__c - DATE( 1900, 1, 8), 7 ) ) )
							-
							(5 * ( FLOOR( ( Fecha_de_inicio__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Fecha_de_inicio__c - DATE( 1900, 1, 8), 7 ) ) ),
							/*Si Fecha_de_fin__c es dia de semana  SI se le suma 1 a la cuenta*/
							(5 * ( FLOOR( ( Fecha_de_Fin__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Fecha_de_Fin__c - DATE( 1900, 1, 8), 7 ) ) )
							-
							(5 * ( FLOOR( ( Fecha_de_inicio__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Fecha_de_inicio__c - DATE( 1900, 1, 8), 7 ) ) )
							+ 1
						)

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de Días</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>