force-app/main/default/objects/Dan360_Licencia__c/fields/Cantidad_de_Horas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Horas__c</fullName>
    <description>Duracion de tiempo consmido por la licencia de Tiempo no Promocional solicitada por el APM.</description>
    <inlineHelpText>Tiempo definido en HORAS.</inlineHelpText>
    <label>Cantidad de Horas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duracion_tiempo_no_promocional</valueSetName>
    </valueSet>
</CustomField>