force-app/main/default/objects/Dan360_Licencia__c/fields/Comentario_de_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Comentario_de_Aprobacion__c</fullName>
    <label>Comentario de Aprobación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>