force-app/main/default/objects/Dan360_Licencia__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <description>Campo para almacenar una descripcion mas amplia sobre la licencia.</description>
    <label>Comentarios</label>
    <type>TextArea</type>
</CustomField>