force-app/main/default/objects/Dan360_Licencia__c/fields/Efectividad__c.field-meta.xml
<CustomField>
    <fullName>Efectividad__c</fullName>
    <label>Efectividad</label>
    <referenceTo>Dan360_Efectividad__c</referenceTo>
    <relationshipLabel>Licencias</relationshipLabel>
    <relationshipName>Licencias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>