force-app/main/default/objects/Dan360_Licencia__c/fields/Fecha_de_Fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Fin__c</fullName>
    <description>Fecha de finalizacion del la licencia/tiempo no promocional</description>
    <label>Fecha de Fin</label>
    <type>Date</type>
</CustomField>