force-app/main/default/objects/Dan360_Licencia__c/fields/Fecha_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio__c</fullName>
    <description>Fecha de inicio desde que se tomo la licencia/tiempo no promocional</description>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>