force-app/main/default/objects/Dan360_Licencia__c/fields/ID_App__c.field-meta.xml
<CustomField>
    <fullName>ID_App__c</fullName>
    <description>ID provisorio usado en la app, este campo se envia para comprobar que no se quiera insertar 2 veces el mismo registro</description>
    <label>ID App</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>