force-app/main/default/objects/Dan360_Licencia__c/fields/isApprobed__c.field-meta.xml
<CustomField>
    <fullName>isApprobed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isApproved</label>
    <type>Checkbox</type>
</CustomField>