force-app/main/default/objects/Dan360_Licencia__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <description>Tipo de licencia/tiempo no promocional por el que se ausento el APM</description>
    <inlineHelpText>Motivo de ausencia</inlineHelpText>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacaciones</fullName>
            </value>
            <value>
                <fullName>Enfermedad</fullName>
            </value>
            <value>
                <fullName>Día de estudio</fullName>
            </value>
            <value>
                <fullName>Festivo</fullName>
            </value>
            <value>
                <fullName>Maternidad</fullName>
            </value>
            <value>
                <fullName>Reunión con jefe</fullName>
            </value>
            <value>
                <fullName>Reunión de equipo</fullName>
            </value>
            <value>
                <fullName>Congreso</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Compensatorios</fullName>
            </value>
            <value>
                <fullName>Feriado provincial</fullName>
            </value>
            <value>
                <fullName>Tiempos de traslado por gira</fullName>
            </value>
            <value>
                <fullName>Capacitacion equipo promocional (TA/EXTERNO)</fullName>
            </value>
            <value>
                <fullName>Relevamiento de datos / Actividad de Fichero</fullName>
            </value>
            <value>
                <fullName>Tareas comerciales</fullName>
            </value>
            <value>
                <fullName>Reunion por temas de acceso/BC</fullName>
            </value>
            <value>
                <fullName>Reunion de seguimiento con la TA</fullName>
            </value>
            <value>
                <fullName>Reunion con KAE/KAM</fullName>
            </value>
            <value>
                <fullName>Convención</fullName>
            </value>
            <value>
                <fullName>Capacitaciones</fullName>
            </value>
            <value>
                <fullName>Congresos</fullName>
            </value>
            <value>
                <fullName>Lanzamientos</fullName>
            </value>
            <value>
                <fullName>Reunion con Auditores</fullName>
            </value>
            <value>
                <fullName>Averiguacion licitaciones</fullName>
            </value>
            <value>
                <fullName>Reunion de ciclo</fullName>
            </value>
            <value>
                <fullName>Workshops de las diferentres TAs (Webinar, ateneos)</fullName>
            </value>
            <value>
                <fullName>Towhall</fullName>
            </value>
            <value>
                <fullName>Cumpleaños</fullName>
            </value>
            <value>
                <fullName>Reunión con HCPS</fullName>
            </value>
            <value>
                <fullName>Convecion</fullName>
                <isActive>false</isActive>
                <label>Convecion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>