force-app/main/default/objects/Dan360_Licencia__c/fields/Tipo_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Registro__c</fullName>
    <description>Guarda el valor developername del recordtype</description>
    <label>Tipo de Registro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>