force-app/main/default/objects/Dan360_Licencia__c/fields/VisMed_APM__c.field-meta.xml
<CustomField>
    <fullName>VisMed_APM__c</fullName>
    <label>APM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Licencias</relationshipLabel>
    <relationshipName>Licencias</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>