force-app/main/default/objects/Dan360_Licencia__c/fields/VisMed_Cantidad_de_Horas_Numerico__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Cantidad_de_Horas_Numerico__c</fullName>
    <formula>CASE(Cantidad_de_Horas__c,
&quot;0.5&quot;, 0.5,
&quot;1.0&quot;, 1.0,
&quot;1.5&quot;, 1.5,
&quot;2.0&quot;, 2.0,
&quot;2.5&quot;, 2.5,
&quot;3.0&quot;, 3.0,
&quot;3.5&quot;, 3.5,
&quot;4.0&quot;, 4.0,
&quot;4.5&quot;, 4.5,
&quot;5.0&quot;, 5.0,
&quot;5.5&quot;, 5.5,
&quot;6.0&quot;, 6.0,
&quot;6.5&quot;, 6.5,
&quot;7.0&quot;, 7.0,
&quot;7.5&quot;, 7.5,
&quot;8.0&quot;, 8.0,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de Horas Numerico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>