force-app/main/default/objects/Dan360_Licencia__c/recordTypes/Licencia.recordType-meta.xml
<RecordType>
    <fullName>Licencia</fullName>
    <active>true</active>
    <description>Tipo de registro para las licencias de tipo Vacaciones, Enfermedad, Día de estudio, Festivo y Maternidad</description>
    <label>Licencia</label>
</RecordType>