force-app/main/default/objects/Dan360_Licencia__c/recordTypes/Tiempo_no_Promocional.recordType-meta.xml
<RecordType>
    <fullName>Tiempo_no_Promocional</fullName>
    <active>true</active>
    <label>Tiempo no Promocional</label>
</RecordType>