force-app/main/default/objects/Dan360_Licencia__c/validationRules/Campo_Editable_en_Estado_Aprobada.validationRule-meta.xml
<ValidationRule>
    <fullName>Campo_Editable_en_Estado_Aprobada</fullName>
    <active>false</active>
    <description>No se puede cambiar el estado del campo editable si la licencia ya esta aprobada.</description>
    <errorConditionFormula>AND( 
				ISPICKVAL(PRIORVALUE(Estado__c), &apos;Aprobada&apos;) ,
				OR(ISPICKVAL(Estado__c, &apos;Aprobada&apos;),ISCHANGED(Estado__c))  
)</errorConditionFormula>
    <errorMessage>No se puede editar una licencia Aprobada</errorMessage>
</ValidationRule>