force-app/main/default/objects/Dan360_Licencia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VisMed_APM__c</columns>
    <columns>Efectividad__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_de_inicio__c</columns>
    <columns>Fecha_de_Fin__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>