force-app/main/default/objects/Dan360_Licencia__c/listViews/Tiempo_no_promocional_sin_aprobar.listView-meta.xml
<ListView>
    <fullName>Tiempo_no_promocional_sin_aprobar</fullName>
    <columns>NAME</columns>
    <columns>VisMed_APM__c</columns>
    <columns>Efectividad__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Fecha_de_inicio__c</columns>
    <columns>Fecha_de_Fin__c</columns>
    <columns>Cantidad_de_Horas__c</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Dan360_Licencia__c.Tiempo_no_Promocional</value>
    </filters>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Pendiente</value>
    </filters>
    <label>Tiempo no promocional sin aprobar</label>
</ListView>